--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -32,6 +32,11 @@ input[readonly] {
   background-color: #eee;
   cursor: not-allowed;
 }
+select[disabled] {
+  background-color: #eee;
+  cursor: not-allowed;
+  color: black ;
+}
 button {
   padding: 8px 12px;
   margin-top: 10px;
@@ -44,4 +49,54 @@ button {
 }
 button:hover {
   background: #1e8449;
+}
+/* ✅ Popup xác nhận */
+.confirm-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.4);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 999;
+}
+.confirm-box {
+  background: #fff;
+  padding: 20px 25px;
+  border-radius: 10px;
+  width: 340px;
+  text-align: center;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+}
+.confirm-box h3 {
+  margin-bottom: 10px;
+  font-size: 18px;
+  color: #2c3e50;
+}
+.confirm-box p {
+  margin-bottom: 20px;
+  color: #555;
+}
+.actions {
+  display: flex;
+  justify-content: space-around;
+}
+.btn-yes {
+  background-color: #27ae60;
+  color: white;
+  border: none;
+  padding: 8px 15px;
+  border-radius: 6px;
+  cursor: pointer;
+}
+.btn-no {
+  background-color: #c0392b;
+  color: white;
+  border: none;
+  padding: 8px 15px;
+  border-radius: 6px;
+  cursor: pointer;
 }
